--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -246,7 +246,7 @@
         $.post("syncData", function (data) {
             // 展示操作结果
             $("#result").html(data)
-
+            showlist();
             loading.baosight.hidePageLoadingMsg() // 隐藏进度条
         })
         location.reload()
